--- a/Client/LogisticsPlatform/AndroidManifest.xml
+++ b/Client/LogisticsPlatform/AndroidManifest.xml
@@ -8,39 +8,64 @@
         android:minSdkVersion="9"
         android:targetSdkVersion="19" />
 
+    <!-- 注册需要的权限 -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
-        
         <activity
             android:name="com.logistics.activity.WelcomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="com.logistics.activity.LoginActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="com.logistics.activity.MainActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="com.logistics.activity.GoodActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="com.logistics.activity.ProfileActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.logistics.activity.GoodResultActivity"
+            android:label="@string/title_activity_good_result" >
+        </activity>
+        <activity
+            android:name="com.logistics.activity.MapActivity"
+            android:label="@string/title_activity_map" >
+        </activity>
+        <activity
+            android:name="com.logistics.activity.ProfileCurrentDealActivity"
+            android:label="@string/title_activity_profile_current_deal" >
+        </activity>
+        <activity
+            android:name="com.logistics.activity.ProfileHistoryDealActivity"
+            android:label="@string/title_activity_profile_history_deal" >
+        </activity>
+        <activity
+            android:name="com.logistics.activity.ProfileChangePasswordActivity"
+            android:label="@string/title_activity_profile_change_password" >
+        </activity>
+        <activity
+            android:name="com.logistics.activity.ProfileChangePhoneActivity"
+            android:label="@string/title_activity_profile_change_phone" >
         </activity>
     </application>
 
