--- a/Client/LogisticsPlatform/AndroidManifest.xml
+++ b/Client/LogisticsPlatform/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.logistics"
@@ -20,7 +19,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
         <activity
-            android:name="com.logistics.activity.WelcomeActivity"
+            android:name=".activity.WelcomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,99 +28,73 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.logistics.activity.LoginActivity"
+            android:name=".activity.LoginActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.logistics.activity.MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.logistics.activity.GoodActivity"
+            android:name=".activity.GoodActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.logistics.activity.ProfileActivity"
+            android:name=".activity.ProfileActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.logistics.activity.GoodResultActivity"
+            android:name=".activity.GoodResultActivity"
             android:label="@string/title_activity_good_result" >
         </activity>
         <activity
-            android:name="com.logistics.activity.MapActivity"
+            android:name=".activity.MapActivity"
             android:label="@string/title_activity_map" >
         </activity>
         <activity
-            android:name="com.logistics.activity.ProfileCurrentDealActivity"
+            android:name=".activity.ProfileCurrentDealActivity"
             android:label="@string/title_activity_profile_current_deal" >
         </activity>
         <activity
-            android:name="com.logistics.activity.ProfileHistoryDealActivity"
+            android:name=".activity.ProfileHistoryDealActivity"
             android:label="@string/title_activity_profile_history_deal" >
         </activity>
         <activity
-            android:name="com.logistics.activity.ProfileChangePasswordActivity"
+            android:name=".activity.ProfileChangePasswordActivity"
             android:label="@string/title_activity_profile_change_password" >
         </activity>
         <activity
-            android:name="com.logistics.activity.ProfileChangePhoneActivity"
+            android:name=".activity.ProfileChangePhoneActivity"
             android:label="@string/title_activity_profile_change_phone" >
         </activity>
-    </application>
-
-</manifest>
-=======
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.logistics"
-    android:versionCode="1"
-    android:versionName="1.0" >
-
-    <uses-sdk
-        android:minSdkVersion="9"
-        android:targetSdkVersion="19" />
-    
-     <!-- 注册需要的权限 -->
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light.NoTitleBar" >
         <activity
-            android:name="com.logistics.activity.WelcomeActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:name=".activity.GoodResultDetailActivity"
+            android:label="@string/title_activity_good_result_detail" >
         </activity>
         <activity
-            android:name="com.logistics.activity.LoginActivity"
-            android:label="@string/app_name" >
+            android:name=".activity.ProfileCurrentDealDetailActivity"
+            android:label="@string/title_activity_profile_current_deal_detail" >
         </activity>
         <activity
-            android:name="com.logistics.activity.MainActivity"
-            android:label="@string/app_name" >
+            android:name=".activity.ProfileHistoryDealDetailActivity"
+            android:label="@string/title_activity_profile_history_deal_detail" >
         </activity>
         <activity
-            android:name="com.logistics.activity.GoodActivity"
-            android:label="@string/app_name" >
+            android:name=".activity.RegisterActivity"
+            android:label="@string/title_activity_register" >
         </activity>
         <activity
-            android:name="com.logistics.activity.ProfileActivity"
-            android:label="@string/app_name" >
+            android:name=".activity.LoginDetailActivity"
+            android:label="@string/title_activity_login_detail" >
         </activity>
         <activity
-            android:name="com.logistics.activity.GoodResultActivity"
-            android:label="@string/title_activity_good_result" >
+            android:name=".activity.ForgetActivity"
+            android:label="@string/title_activity_forget" >
+        </activity>
+        <activity
+            android:name="com.logistics.activity.SettingsActivity"
+            android:label="@string/title_activity_settings" >
         </activity>
     </application>
 
 </manifest>
->>>>>>> 46e79dbfff10edcb7bc82719de58462ce8d62a61
