--- a/Server/tornado/supervisor_tornado.conf
+++ b/Server/tornado/supervisor_tornado.conf
@@ -2,18 +2,18 @@
 programs=tornado-10080,tornado-18080
 
 [program:tornado-10080]
-command=python3 /var/www/hello.py --port=10080
-directory=/var/www
-user=www-data
+command=python3 /home/tornado/LogisticsPlatform/Server/tornado/hello.py --port=10080
+directory=/home/tornado/LogisticsPlatform/Server/tornado
+user=tornado
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/log/tornado.log
 loglevel=info
 
 [program:tornado-18080]
-command=python3 /var/www/hello.py --port=18080
-directory=/var/www
-user=www-data
+command=python3 /home/tornado/LogisticsPlatform/Server/tornado/hello.py --port=18080
+directory=/home/tornado/LogisticsPlatform/Server/tornado
+user=tornado
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/log/tornado.log
