finish user signup, login, reset

--- a/Server/tornado/nginx_tornado.conf
+++ b/Server/tornado/nginx_tornado.conf
@@ -3,6 +3,10 @@ upstream tornadoes {
     server 127.0.0.1:18080;
 }
 
+upstream users {
+    server 127.0.0.1:10086;
+}
+
 server {
     listen 80 default_server;
     server_name localhost;
@@ -32,5 +36,32 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Scheme $scheme;
         proxy_pass http://tornadoes;
+    }
+
+    location = /login {
+        proxy_pass_header Server;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_pass http://users;
+    }
+
+    location = /reset {
+        proxy_pass_header Server;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_pass http://users;
+    }
+
+    location = /signup {
+        proxy_pass_header Server;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_pass http://users;
     }
 }
