--- a/Server/tornado/supervisor_tornado.conf
+++ b/Server/tornado/supervisor_tornado.conf
@@ -1,6 +1,10 @@
 [group:tornadoes]
 programs=tornado-10080,tornado-18080
 
+[group:users]
+programs=user-10086
+
+
 [program:tornado-10080]
 command=python3 /home/tornado/LogisticsPlatform/Server/tornado/hello.py --port=10080
 directory=/home/tornado/LogisticsPlatform/Server/tornado
@@ -12,6 +16,15 @@ loglevel=info
 
 [program:tornado-18080]
 command=python3 /home/tornado/LogisticsPlatform/Server/tornado/hello.py --port=18080
+directory=/home/tornado/LogisticsPlatform/Server/tornado
+user=tornado
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/log/tornado.log
+loglevel=info
+
+[program:user-10086]
+command=python3 /home/tornado/LogisticsPlatform/Server/tornado/user.py --port=10086
 directory=/home/tornado/LogisticsPlatform/Server/tornado
 user=tornado
 autorestart=true
