--- a/Client/LogisticsPlatform/AndroidManifest.xml
+++ b/Client/LogisticsPlatform/AndroidManifest.xml
@@ -33,7 +33,8 @@
         </activity>
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            >
         </activity>
         <activity
             android:name=".activity.GoodActivity"
@@ -94,13 +95,14 @@
 
         <service android:name=".service.PushAndPull" >
         </service>
-        <service android:name=".service.NotifyCenter" >
-        </service>
-
+        
         <activity
             android:name=".activity.WebDisplayActivity"
             android:label="@string/title_activity_web_display" >
         </activity>
+        
+        <receiver android:name="MsgReceiver" >
+        </receiver>
     </application>
 
 </manifest>
