--- a/Client/LogisticsPlatform/AndroidManifest.xml
+++ b/Client/LogisticsPlatform/AndroidManifest.xml
@@ -92,6 +92,11 @@
             android:name=".activity.ForgetActivity"
             android:label="@string/title_activity_forget" >
         </activity>
+        
+        <activity
+            android:name=".activity.RSSActivity"
+            android:label="@string/title_activity_rss" >
+        </activity>
 
         <service android:name=".service.PushAndPull" >
         </service>
