--- a/Server/tornado/nginx_tornado.conf
+++ b/Server/tornado/nginx_tornado.conf
@@ -11,7 +11,16 @@ server {
     listen 80 default_server;
     server_name localhost;
 
-    location /latest {
+    location = /citytop {
+        proxy_pass_header Server;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_pass http://tornadoes;
+    }
+
+    location = /latest {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
         proxy_redirect off;
