fix #28 && 前台更新频率
1.调整订阅的显示方式
2.程序前台时保持1分钟1次的更新频率

--- a/Client/LogisticsPlatform/AndroidManifest.xml
+++ b/Client/LogisticsPlatform/AndroidManifest.xml
@@ -101,6 +101,9 @@
         <service android:name=".service.PushAndPull" >
         </service>
         
+        <service android:name=".service.NotifyCenter" >
+        </service>
+        
         <activity
             android:name=".activity.WebDisplayActivity"
             android:label="@string/title_activity_web_display" >
@@ -108,6 +111,10 @@
         
         <receiver android:name="MsgReceiver" >
         </receiver>
+        
+        <receiver android:name="RSSReceiver" >
+        </receiver>
+        
     </application>
 
 </manifest>
