add truck on nginx

--- a/Server/tornado/supervisor_tornado.conf
+++ b/Server/tornado/supervisor_tornado.conf
@@ -1,5 +1,8 @@
 [group:tornadoes]
-programs=tornado-10080,tornado-18080
+programs=tornado-10080
+
+[group:trucks]
+programs=truck-18080
 
 [group:users]
 programs=user-10086
@@ -14,8 +17,8 @@ redirect_stderr=true
 stdout_logfile=/var/log/tornado.log
 loglevel=info
 
-[program:tornado-18080]
-command=python3 /home/tornado/LogisticsPlatform/Server/tornado/hello.py --port=18080
+[program:truck-18080]
+command=python3 /home/tornado/LogisticsPlatform/Server/tornado/truck.py --port=18080
 directory=/home/tornado/LogisticsPlatform/Server/tornado
 user=tornado
 autorestart=true
