--- a/Server/tornado/nginx_tornado.conf
+++ b/Server/tornado/nginx_tornado.conf
@@ -1,5 +1,8 @@
 upstream tornadoes {
     server 127.0.0.1:10080;
+}
+
+upstream trucks {
     server 127.0.0.1:18080;
 }
 
@@ -10,6 +13,15 @@ upstream users {
 server {
     listen 80 default_server;
     server_name localhost;
+
+    location = /trucktop {
+        proxy_pass_header Server;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_pass http://trucks;
+    }
 
     location = /citytop {
         proxy_pass_header Server;
