--- a/Client/LogisticsPlatform_stable/app/src/main/AndroidManifest.xml
+++ b/Client/LogisticsPlatform_stable/app/src/main/AndroidManifest.xml
@@ -12,9 +12,15 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	
-    
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -35,12 +41,12 @@
         </activity>
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name" 
-            >
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name=".activity.GoodActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity
             android:name=".activity.ProfileActivity"
@@ -64,7 +70,8 @@
         </activity>
         <activity
             android:name=".activity.ProfileChangePasswordActivity"
-            android:label="@string/title_activity_profile_change_password" >
+            android:label="@string/title_activity_profile_change_password"
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity
             android:name=".activity.ProfileChangePhoneActivity"
@@ -94,33 +101,52 @@
             android:name=".activity.ForgetActivity"
             android:label="@string/title_activity_forget" >
         </activity>
-        
         <activity
             android:name=".activity.RSSActivity"
-            android:label="@string/title_activity_rss" >
+            android:label="@string/title_activity_rss"
+            android:windowSoftInputMode="adjustPan">
         </activity>
 
         <service android:name=".service.PushAndPull" >
         </service>
-        
         <service android:name=".service.NotifyCenter" >
         </service>
-        
+
         <activity
             android:name=".activity.WebDisplayActivity"
             android:label="@string/title_activity_web_display" >
         </activity>
-        
-        <receiver android:name="MsgReceiver" >
+
+        <receiver android:name=".MsgReceiver" >
         </receiver>
-        
-        <receiver android:name="RSSReceiver" >
+        <receiver android:name=".RSSReceiver" >
         </receiver>
+
         <activity
             android:name=".activity.ProfilePushlistActivity"
             android:label="@string/title_activity_profile_pushlist" >
         </activity>
-
+        <activity
+            android:name=".activity.MainFragmentActivity"
+            android:label="@string/title_activity_main_fragment" >
+        </activity>
+        <activity
+            android:name=".activity.GoodFragmentActivity"
+            android:label="@string/title_activity_good_fragment" >
+        </activity>
+        <activity
+            android:name=".activity.MapFragmentActivity"
+            android:label="@string/title_activity_map_fragment" >
+        </activity>
+        <activity
+            android:name=".activity.RSSFragmentActivity"
+            android:label="@string/title_activity_rssfragment"
+            android:windowSoftInputMode="adjustPan">
+        </activity>
+        <activity
+            android:name=".activity.ProfileFragmentActivity"
+            android:label="@string/title_activity_profile_fragment" >
+        </activity>
     </application>
 
 </manifest>
